[package]
    authors     = ["Rhelvetican"]
    description = "An alternative getters/setters proc-macro library."
    edition     = "2021"
    license     = "MIT OR AFL-3.0 OR LGPL-3.0-or-later"
    name        = "altgetset"
    version     = "0.1.0"

[lib]
    proc-macro = true

[dependencies]
    proc-macro-error2 = "2"
    proc-macro2       = "1"
    quote             = "1"
    syn               = "2"
